[gd_scene load_steps=5 format=3 uid="uid://0sbaravn4oue"]

[ext_resource type="Script" path="res://src/line/line.gd" id="1_h13da"]
[ext_resource type="PackedScene" uid="uid://b23sjds8pbe6u" path="res://src/key value row/key_value.tscn" id="2_3yyuc"]
[ext_resource type="PackedScene" uid="uid://swgu7wlvgbpy" path="res://src/expand container button/expand_container.tscn" id="2_5jr0r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yth7f"]
bg_color = Color(0.0117647, 0.0470588, 0.129412, 1)

[node name="line" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yth7f")
script = ExtResource("1_h13da")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="expand_container" parent="VBoxContainer2" instance=ExtResource("2_5jr0r")]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="main_cont" type="VBoxContainer" parent="VBoxContainer2/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="code" parent="VBoxContainer2/ScrollContainer/MarginContainer/main_cont" instance=ExtResource("2_3yyuc")]
layout_mode = 2

[node name="key" parent="VBoxContainer2/ScrollContainer/MarginContainer/main_cont/code" index="0"]
text = "code:"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer2/ScrollContainer/MarginContainer/main_cont"]
layout_mode = 2

[node name="indent" parent="VBoxContainer2/ScrollContainer/MarginContainer/main_cont" instance=ExtResource("2_3yyuc")]
layout_mode = 2

[node name="key" parent="VBoxContainer2/ScrollContainer/MarginContainer/main_cont/indent" index="0"]
text = "indent:"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer2/ScrollContainer/MarginContainer/main_cont"]
layout_mode = 2

[node name="parameters" parent="VBoxContainer2/ScrollContainer/MarginContainer/main_cont" instance=ExtResource("2_3yyuc")]
layout_mode = 2

[node name="key" parent="VBoxContainer2/ScrollContainer/MarginContainer/main_cont/parameters" index="0"]
text = "parameters:"

[connection signal="request_expand" from="VBoxContainer2/expand_container" to="." method="_on_expand_container_request_expand"]

[editable path="VBoxContainer2/expand_container"]
[editable path="VBoxContainer2/ScrollContainer/MarginContainer/main_cont/code"]
[editable path="VBoxContainer2/ScrollContainer/MarginContainer/main_cont/indent"]
[editable path="VBoxContainer2/ScrollContainer/MarginContainer/main_cont/parameters"]
